Fixed uneven second level icon position for past jobs. added link for github repo

--- a/css/resume.css
+++ b/css/resume.css
@@ -131,6 +131,10 @@ table .center {
     background-image: url('../img/suitcase.png');
 }
 
+.ico-time {
+    background-image: url('../img/time.png');
+}
+
 /*            *\
      #Text
 \*            */
@@ -351,6 +355,7 @@ p {
         width: 30px;
         height: 30px;
         background-size: 20px;
+        background-position-y: 5px;
     }
 
     .eval-points {
